--- a/.gitlab/ci/common.yml
+++ b/.gitlab/ci/common.yml
@@ -45,7 +45,7 @@
         > common/release.go
 
     # Build binaries
-    - go build -o "${ARTIFACT_DIR}/${PRODUCT_NAME}-${GOOS}-${GOARCH}${GOEXT}" -ldflags="-s -w"
+    - go build -o "${ARTIFACT_DIR}/${PRODUCT_NAME}-${GOOS}-${GOARCH}-${CI_COMMIT_TAG:-${CI_COMMIT_SHORT_SHA:-unversioned}}${GOEXT}" -ldflags="-s -w"
 
     # Run tests
     - go test -v ./...
