--- a/.gitlab/ci/release.yml
+++ b/.gitlab/ci/release.yml
@@ -1,11 +1,30 @@
 ### Release Artifacts Stages ###
-release:
+release:artifacts:
   stage: release:artifacts
   image: google/cloud-sdk:alpine
   tags:
     - deploy-optimised
-
   cache: {}
 
-  # Upload binaries to artifacts store
-  script: gsutil cp -r build/* "${RELEASE_ARTIFACTS_BUCKET}/${CI_PROJECT_PATH}/${CI_COMMIT_SHA}/artifacts"
+  rules:
+    # Run automatically on tagged commit
+    - if: $CI_COMMIT_TAG
+      when: on_success
+
+    # Block on merge request
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+      when: never
+
+    # Block on empty commit or new branch
+    - if: $CI_COMMIT_BEFORE_SHA == '0000000000000000000000000000000000000000'
+      when: never
+
+    # Fallback to manual deployment
+    - when: manual
+
+  script:
+    # Use tag name for tagged release, or commit ID for untagged release
+    - export ARTIFACT_PREFIX=$(if [ ! -z "${CI_COMMIT_TAG}" ]; then echo "tagged/${CI_COMMIT_TAG}"; else echo "nightly/${CI_COMMIT_SHA:-unversioned}"; fi)
+
+    # Upload binaries to artifacts store
+    - gsutil -m cp -r build/* "${RELEASE_ARTIFACTS_BUCKET}/${CI_PROJECT_PATH}/${ARTIFACT_PREFIX}/artifacts"
