--- a/.gitlab/ci/common.yml
+++ b/.gitlab/ci/common.yml
@@ -45,7 +45,9 @@
         > common/release.go
 
     # Build binaries
-    - go build -o "${ARTIFACT_DIR}/${PRODUCT_NAME}-${GOOS}-${GOARCH}-${CI_COMMIT_TAG:-${CI_COMMIT_SHORT_SHA:-unversioned}}${GOEXT}" -ldflags="-s -w"
+    - export BIN_NAME="${ARTIFACT_DIR}/${PRODUCT_NAME}-${GOOS}-${GOARCH}-${CI_COMMIT_TAG:-${CI_COMMIT_SHORT_SHA:-unversioned}}${GOEXT}"
+    - go build -o "${BIN_NAME}" -ldflags="-s -w"
+    - chmod +x "${BIN_NAME}"
 
     # Run tests
     - go test -v ./...
